--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "nodemon": "^3.1.7"
   },
   "scripts": {
-    "test": "test",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "start",
+    "dev": "dev"
+
   },
   "keywords": [
     "users",
