--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
     "main": "app.js",
     "dependencies": {
         "compression": "^1.7.5",
-        "dotenv": "^16.4.5",
         "express": "^4.21.1",
-        "helmet": "^8.0.0",
-        "node-cache": "^5.1.2"
+        "helmet": "^8.0.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9",
+        "dotenv": "^16.4.5"
     },
     "scripts": {
         "start": "node app.js",
