--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dependencies": {
         "compression": "^1.7.5",
         "express": "^4.21.1",
+        "express-rate-limit": "^7.5.1",
         "helmet": "^8.0.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.9",
-        "dotenv": "^16.4.5"
+        "dotenv": "^16.4.5",
+        "nodemon": "^3.1.10"
     },
     "scripts": {
         "start": "node index.js",
